--- a/src/Ds2013/Presenters/Section/Episode/Map/Panels/Main/details.html.twig
+++ b/src/Ds2013/Presenters/Section/Episode/Map/Panels/Main/details.html.twig
@@ -8,7 +8,11 @@
             <h1 class="no-margin">{{ details.getEpisode().getTitle() }}</h1>
             <div class="gamma">
                 <div class="{% if not details.getEpisode().getParent().isTleo() %}offset{% endif %}">
-                    {{ ds_shared('entityContext', details.getEpisode(), {'include_self': false}) }}
+                    {{- ds_shared(
+                        'entityContext',
+                        details.getEpisode(),
+                        { 'include_self': false, 'is_tabbable': true }
+                    ) -}}
                 </div>
                 {% if details.getEpisode().getPosition() and details.getEpisode().getParent().getExpectedChildCount() %}
                     <span>
