--- a/src/DsShared/Utilities/EntityContext/entity_context.html.twig
+++ b/src/DsShared/Utilities/EntityContext/entity_context.html.twig
@@ -1,8 +1,6 @@
 {%- for item in entity_context.getAncestry() -%}
-    <a
-        {{ not entity_context.getOption('is_tabbable') ? 'tabindex="-1"' }}
-        class="context__item"
-        href="{{ path('find_by_pid', {'pid': item.getPid()}) }}"
+    <a class="context__item" href="{{ path('find_by_pid', {'pid': item.getPid()}) }}"
+        {{- not entity_context.getOption('is_tabbable') ? ' tabindex="-1"' -}}
     >
        {{- item.getTitle() -}}
     </a>
