--- a/src/Ds2013/Presenters/Domain/CoreEntity/Programme/_programme.scss
+++ b/src/Ds2013/Presenters/Domain/CoreEntity/Programme/_programme.scss
@@ -207,6 +207,8 @@ $programme-icon-bpw-box-size: gel-typography('bpw', 'delta', 'line-height') + 18
     }
 
     .programme__img-box {
+        //background: #cccccc;
+        background: rgba(204, 204, 204, 0.5);
         display: block;
         visibility: visible;
     }
