--- a/templates/base_ds2013.html.twig
+++ b/templates/base_ds2013.html.twig
@@ -56,6 +56,7 @@
                     'cookieStore': "{{ asset_js("js/cookieStore.js") }}",
                     'uasclient': "https://static.bbc.co.uk/uasclient/0.1.42/modules/uasclient",
                     'relay-1': "https://static.bbc.co.uk/frameworks/relay/0.2.6/sharedmodules/relay-1",
+                    'policy-service': "{{ asset_js("js/policy-service.js") }}",
                     'third-party': "{{ asset_js("js/third-party.js") }}",
                     'kite': 'https://downloads.bbc.co.uk/interactive/embed/',
                 },
