--- a/src/DsShared/Utilities/Image/image.html.twig
+++ b/src/DsShared/Utilities/Image/image.html.twig
@@ -1,5 +1,5 @@
 {% if image.hasImage() %}
-    {% set Srcsets = image.getSrcsets() %}
+    {% set srcsets = image.getSrcsets() %}
 {% else %}
     {% set Srcsets = asset('images/blank.png') %}
 {% endif %}
